--- a/public/time/time.html
+++ b/public/time/time.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Time</title>
 
-    <link rel="stylesheet" href="/time/time.css">
-    <script src="/time/time.js"></script>
+    <link rel="stylesheet" href="time.css">
+    <script src="time.js"></script>
 
 </head>
 <body>
