change html style paths

--- a/public/time/time.html
+++ b/public/time/time.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Time</title>
-
-    <link rel="stylesheet" href="./time.css">
-    <script src="./time.css"></script>
-
+    <link rel="stylesheet" href="time/time.css">
+    <script src="/time/time.css"></script>
 </head>
 <body>
 
