--- a/public/time/time.html
+++ b/public/time/time.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Time</title>
     <link rel="stylesheet" href="/time/time.css">
-    <script src="time.css"></script>
+    <script src="/time/time.js"></script>
 </head>
 <body>
 
